force-app/main/default/objects/Plan__c/fields/acaPlan__c.field-meta.xml
<CustomField>
    <fullName>acaPlan__c</fullName>
    <label>ACA Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>