force-app/main/default/objects/Plan__c/fields/applicableCoverageTiers__c.field-meta.xml
<CustomField>
    <fullName>applicableCoverageTiers__c</fullName>
    <label>Applicable Coverage Tiers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ApplicableCoverageTier</valueSetName>
    </valueSet>
</CustomField>