force-app/main/default/objects/Plan__c/fields/approvalProcessRequired__c.field-meta.xml
<CustomField>
    <fullName>approvalProcessRequired__c</fullName>
    <label>Approval Process Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>