force-app/main/default/objects/Plan__c/fields/chpReligiousIndicator__c.field-meta.xml
<CustomField>
    <fullName>chpReligiousIndicator__c</fullName>
    <label>CHP Religious Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>