force-app/main/default/objects/Plan__c/fields/creditableCoverageType__c.field-meta.xml
<CustomField>
    <fullName>creditableCoverageType__c</fullName>
    <label>Creditable Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Creditable_Coverage</valueSetName>
    </valueSet>
</CustomField>