force-app/main/default/objects/Plan__c/fields/depAgeMax__c.field-meta.xml
<CustomField>
    <fullName>depAgeMax__c</fullName>
    <label>Dependent Age Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>