force-app/main/default/objects/Plan__c/fields/depAgeWhen__c.field-meta.xml
<CustomField>
    <fullName>depAgeWhen__c</fullName>
    <label>Dependent Age When</label>
    <length>255</length>
    <type>Text</type>
</CustomField>