force-app/main/default/objects/Plan__c/fields/distributionChannels__c.field-meta.xml
<CustomField>
    <fullName>distributionChannels__c</fullName>
    <label>Distribution Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DistributionChannel</valueSetName>
    </valueSet>
</CustomField>