force-app/main/default/objects/Plan__c/fields/employerContribution__c.field-meta.xml
<CustomField>
    <fullName>employerContribution__c</fullName>
    <label>Employer Contribution</label>
    <type>TextArea</type>
</CustomField>