force-app/main/default/objects/Plan__c/fields/endDate__c.field-meta.xml
<CustomField>
    <fullName>endDate__c</fullName>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>