force-app/main/default/objects/Plan__c/fields/formularyName__c.field-meta.xml
<CustomField>
    <fullName>formularyName__c</fullName>
    <label>Formulary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>