force-app/main/default/objects/Plan__c/fields/fundingArrangements__c.field-meta.xml
<CustomField>
    <fullName>fundingArrangements__c</fullName>
    <label>Funding Arrangement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Funding_Arrangement</valueSetName>
    </valueSet>
</CustomField>