force-app/main/default/objects/Plan__c/fields/grandfatheredPlan__c.field-meta.xml
<CustomField>
    <fullName>grandfatheredPlan__c</fullName>
    <label>Grandfathered Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>