force-app/main/default/objects/Plan__c/fields/grpSizeMin__c.field-meta.xml
<CustomField>
    <fullName>grpSizeMin__c</fullName>
    <label>Group Min Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Group_Min_Size</valueSetName>
    </valueSet>
</CustomField>