force-app/main/default/objects/Plan__c/fields/hsaVendor__c.field-meta.xml
<CustomField>
    <fullName>hsaVendor__c</fullName>
    <label>HSA Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>