force-app/main/default/objects/Plan__c/fields/isDeductibleAmountsCombinedOrSeparate__c.field-meta.xml
<CustomField>
    <fullName>isDeductibleAmountsCombinedOrSeparate__c</fullName>
    <label>Deductible Amounts Are</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Deductible_Amounts_Are</valueSetName>
    </valueSet>
</CustomField>