force-app/main/default/objects/Plan__c/fields/isGrandmothered__c.field-meta.xml
<CustomField>
    <fullName>isGrandmothered__c</fullName>
    <label>Grandmothered Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>