force-app/main/default/objects/Plan__c/fields/isHighDeductiblePlan__c.field-meta.xml
<CustomField>
    <fullName>isHighDeductiblePlan__c</fullName>
    <label>High-Deductible Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>