force-app/main/default/objects/Plan__c/fields/isIncludeCreditAmount__c.field-meta.xml
<CustomField>
    <fullName>isIncludeCreditAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Include Credit Amount</label>
    <type>Checkbox</type>
</CustomField>