force-app/main/default/objects/Plan__c/fields/isIncludeSecondaryMoop__c.field-meta.xml
<CustomField>
    <fullName>isIncludeSecondaryMoop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Include Secondary Moop</label>
    <type>Checkbox</type>
</CustomField>