force-app/main/default/objects/Plan__c/fields/marketingStatus__c.field-meta.xml
<CustomField>
    <fullName>marketingStatus__c</fullName>
    <label>Marketing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Status</valueSetName>
    </valueSet>
</CustomField>