force-app/main/default/objects/Plan__c/fields/marketSegments__c.field-meta.xml
<CustomField>
    <fullName>marketSegments__c</fullName>
    <label>Market Segments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MarketSegment</valueSetName>
    </valueSet>
</CustomField>