force-app/main/default/objects/Plan__c/fields/memberFundings__c.field-meta.xml
<CustomField>
    <fullName>memberFundings__c</fullName>
    <label>Member Fundings</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Member_Funding</valueSetName>
    </valueSet>
</CustomField>