force-app/main/default/objects/Plan__c/fields/minEssentialCoverage__c.field-meta.xml
<CustomField>
    <fullName>minEssentialCoverage__c</fullName>
    <label>Min Essential Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>