force-app/main/default/objects/Plan__c/fields/minValueCoverage__c.field-meta.xml
<CustomField>
    <fullName>minValueCoverage__c</fullName>
    <label>Min Value Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>