force-app/main/default/objects/Plan__c/fields/pcpRequired__c.field-meta.xml
<CustomField>
    <fullName>pcpRequired__c</fullName>
    <label>PCP Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>