force-app/main/default/objects/Plan__c/fields/planCoverageExceptions__c.field-meta.xml
<CustomField>
    <fullName>planCoverageExceptions__c</fullName>
    <label>Plan Coverage Exceptions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>with Implants</fullName>
            </value>
            <value>
                <fullName>with Orthodontia</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>