force-app/main/default/objects/Plan__c/fields/planDesign__c.field-meta.xml
<CustomField>
    <fullName>planDesign__c</fullName>
    <label>Plan Design</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-2-3</fullName>
            </value>
            <value>
                <fullName>Coinsurance</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Copay</fullName>
            </value>
            <value>
                <fullName>Copay After Deductible</fullName>
            </value>
            <value>
                <fullName>Copayment After Prescription Drug Deductible</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>Enhanced</fullName>
            </value>
            <value>
                <fullName>Exam Only</fullName>
            </value>
            <value>
                <fullName>Exam Plus</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Integrated</fullName>
            </value>
            <value>
                <fullName>Lens and Frame Only</fullName>
            </value>
            <value>
                <fullName>Rollover</fullName>
            </value>
            <value>
                <fullName>Tiered</fullName>
            </value>
            <value>
                <fullName>Traditional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>