force-app/main/default/objects/Plan__c/fields/planDueDate__c.field-meta.xml
<CustomField>
    <fullName>planDueDate__c</fullName>
    <label>Plan Due Date</label>
    <type>Date</type>
</CustomField>