force-app/main/default/objects/Plan__c/fields/planExternalId__c.field-meta.xml
<CustomField>
    <fullName>planExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Plan External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>