force-app/main/default/objects/Plan__c/fields/planYear__c.field-meta.xml
<CustomField>
    <fullName>planYear__c</fullName>
    <label>Plan Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year</valueSetName>
    </valueSet>
</CustomField>