force-app/main/default/objects/Plan__c/fields/productClasses__c.field-meta.xml
<CustomField>
    <fullName>productClasses__c</fullName>
    <label>Product Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Medical</fullName>
            </value>
            <value>
                <fullName>Pharmacy</fullName>
            </value>
            <value>
                <fullName>Vision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>