force-app/main/default/objects/Plan__c/fields/productFamilies__c.field-meta.xml
<CustomField>
    <fullName>productFamilies__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Family</valueSetName>
    </valueSet>
</CustomField>