force-app/main/default/objects/Plan__c/fields/productRegulatoryApproval__c.field-meta.xml
<CustomField>
    <fullName>productRegulatoryApproval__c</fullName>
    <label>Plan regulatory Approval</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_regulatory_Approval</valueSetName>
    </valueSet>
</CustomField>