force-app/main/default/objects/Plan__c/fields/productRegulatoryDate__c.field-meta.xml
<CustomField>
    <fullName>productRegulatoryDate__c</fullName>
    <label>Plan Regulatory Date</label>
    <type>Date</type>
</CustomField>