force-app/main/default/objects/Plan__c/fields/productTypes__c.field-meta.xml
<CustomField>
    <fullName>productTypes__c</fullName>
    <label>Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Catastrophic</fullName>
            </value>
            <value>
                <fullName>EPO</fullName>
            </value>
            <value>
                <fullName>HMO</fullName>
            </value>
            <value>
                <fullName>Indemnity</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>PPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>