force-app/main/default/objects/Plan__c/fields/providerNetworkLink__c.field-meta.xml
<CustomField>
    <fullName>providerNetworkLink__c</fullName>
    <label>Provider Network Link</label>
    <type>Url</type>
</CustomField>