force-app/main/default/objects/Plan__c/fields/providerNetworkPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>providerNetworkPhoneNumber__c</fullName>
    <label>provider Network Phone Number</label>
    <type>Phone</type>
</CustomField>