force-app/main/default/objects/Plan__c/fields/providerNetworks__c.field-meta.xml
<CustomField>
    <fullName>providerNetworks__c</fullName>
    <label>Provider Network</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>