force-app/main/default/objects/Plan__c/fields/providerTierDisplayNames__c.field-meta.xml
<CustomField>
    <fullName>providerTierDisplayNames__c</fullName>
    <label>Provider Tiers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Provider_Tier</valueSetName>
    </valueSet>
</CustomField>