force-app/main/default/objects/Plan__c/fields/religionPlanIndicator__c.field-meta.xml
<CustomField>
    <fullName>religionPlanIndicator__c</fullName>
    <label>Religious Plan Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>