force-app/main/default/objects/Plan__c/fields/salesStatus__c.field-meta.xml
<CustomField>
    <fullName>salesStatus__c</fullName>
    <label>Sales Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned</fullName>
            </value>
            <value>
                <fullName>Post Sales</fullName>
            </value>
            <value>
                <fullName>pre Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>