force-app/main/default/objects/Plan__c/fields/sbcHeaderName__c.field-meta.xml
<CustomField>
    <fullName>sbcHeaderName__c</fullName>
    <label>SBC Header Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>