force-app/main/default/objects/Plan__c/fields/startDate__c.field-meta.xml
<CustomField>
    <fullName>startDate__c</fullName>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>