force-app/main/default/objects/Plan__c/fields/udfplan_LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>udfplan_LegalEntity__c</fullName>
    <label>Legal Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>